--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,5 @@ pandas==1.5.3
 streamlit==1.29.0
 numpy==1.26.3
 beautifulsoup4==4.12.2
-dotenv==0.0.5
-streamlit_globe==0.2.1
+python-dotenv==0.21.1
+streamlit-globe==0.2.1
